--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,3 +39,20 @@ knife4j:
 # 日志输出
 logging:
   config: classpath:logback.xml
+
+rocketmq:
+  name-server: http://127.0.0.1:9876
+  producer:
+    group: logGroup
+    # 消息最大长度 默认1024*4(4M)
+    maxMessageSize: 4096
+    # 发送消息超时时间,默认3000
+    sendMsgTimeout: 3000
+    # 发送消息失败重试次数，默认2
+    retryTimesWhenSendFailed: 2
+
+log-config:
+  # 是否开启自定义日志
+  enable: true
+  # MQ记录日志
+  mq-enable: true
